# Gruppenzuteilung_O-Phase

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  alg_common.cpp  alg_common.h  algorithms.cpp  algorithms.h  basic_test.cpp  config.cpp  config.h  definitions.cpp  definitions.h  download_boost.cmake  implementation.h  input_definition.json  main.cpp  moves_local_search.cpp  moves_local_search.h  out.json  output_definition.json  parse.cpp  parse.h  randomized_test.cpp  student_types.cpp  test_data.json  welcome.sh
.github/workflows/: build-docker.yml
config/: config_2021  config_2022  config_2022_min  config_2023  config_2023_min_group_sizes  recommended_config  recommended_types  types_2022
data_scripts/: config.ini  get_data.sh  requirements.txt  send_results.py
src/: algorithms.cpp  algorithms.h  config.cpp  config.h  definitions.cpp  definitions.h  io.cpp  io.h  main.cpp  parse.cpp  student_types.cpp  student_types.h
test/: basic_test.cpp  randomized_test.cpp
test_data/: config_2021  config_2022  data_2021.json  data_2022.json  data_2022_min.json  data_2023.json  data_2024.json  test_data.json  tutorentag_2022_a.json  types_2021
